<resources>
    <string name="app_name">Diet NLSS</string>
    <string name="title_activity_homescreen">Homescreen</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="tab">\u0009</string>
    <string name="DietScreen">Your Diet for </string>
    <string name="prom">What is your most prominent meal?</string>
    <string name="pref">Preferences</string>
    <string name="meals">How many main meals do you have in a day?</string>
    <string name="drinks">What is your prefered drink for breakfast?</string>
    <string name="activity">How much is your activity level in a day?</string>
    <string name="basic">Basic Information</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Please enter your height</string>
    <string name="weight">Please enter your weight</string>
    <string name="food">What kinds of food do you prefer?</string>
    <string name="bf">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="graphs">Graphs:</string>
    <string name="w_graph">Water Graph</string>
    <string name="cal_dist_graph">Calorie Distributon Pie Graph</string>
    <string name="we_graph">Weight Graph</string>
    <string name="login">Login</string>
    <string name="reg">Register Here</string>
    <string name="rem">Remember Me</string>
    <string name="exe">+ Exercise</string>
    <string name="dur">Duration[min]</string>
    <string name="act">Activity</string>
    <string name="cal_b">Calories Burned</string>
    <string name="calc">Calculate</string>
    <string name="regh">Register</string>
    <string name="not">Notify ME!</string>
    <string name="cu">Custom diet</string>
    <string name="gr">Graph</string>
    <string name="m_weight">Maintain Weight</string>
    <string name="g_weight">Gain Weight</string>
    <string name="l_weight">Gain Weight</string>
    <string name="up">Update</string>
    <string name="ad">Add</string>
    <string name="wc">Water consumed</string>
    <string name="cl">Cancel</string>
    <string name="st">Set</string>
    <string name="help">Help</string>
    <string name="log">1. Login page</string>
    <string name="logd">After you login using remember me checkbox ticked, the app automatically logins the next time you open the app.</string>
    <string name="rep">Result page</string>
    <string name="repd1">This page shows the category of BMI in which you lie. </string>
    <string name="repd2">It also shows the BMR(Basal Metabolic Rate) ie. the amount of energy expressed in calories that a person needs to keep the body functioning at rest.</string>
    <string name="res">2. Result page</string>
    <string name="dip">3. Diet page</string>
    <string name="dipd">On clicking each food item, you get to know the basic nutrients contained in it.</string>
    <string name="beve">Choice of beverage</string>
    <string name="title_activity_bbbf">bbbf</string>
</resources>