<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_graphs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nickydcruz.loginregister.Graphs">

    <Button
        android:text="@string/we_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/WeightGraph"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/cal_dist_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/WeightGraph"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:id="@+id/CalorieDistribution"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/w_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:id="@+id/WaterGraph"
        android:layout_below="@+id/CalorieDistribution"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/graphs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:id="@+id/textView8" />
</RelativeLayout>
